fix: err about non-defined module

--- a/listen1.html
+++ b/listen1.html
@@ -20,7 +20,7 @@
 
     <link href="images/logo_16.png" rel="shortcut icon" />
     <link href="images/logo_16.png" rel="bookmark" />
-    <!-- 使用外部脚本替换内联脚本 -->
+    <!-- instead of inline scripts -->
     <script type="text/javascript" src="script.js"></script>
     
     <script type="text/javascript" src="js/vendor/angular.min.js"></script>
@@ -32,6 +32,7 @@
     ></script>
     <script type="text/javascript" src="js/vendor/axios.min.js"></script>
     <script type="text/javascript" src="js/vendor/notyf.min.js"></script>
+    <!-- instead of inline scripts -->
     <script type="text/javascript" src="js/vendor/howler.core.min.js"></script>
     <script type="text/javascript" src="js/vendor/hotkeys.min.js"></script>
     <script type="text/javascript" src="js/vendor/async.min.js"></script>
